--- a/home/home.html
+++ b/home/home.html
@@ -11,7 +11,9 @@
     <h1 id="titulo" style="text-align: center;">
         Bem vindo mano brown
     </h1>
-    <button onclick="index()">Vai pro registro irmao</button>
+    <br>
+    <br>
+    <button class="ovo" onclick="index()">Vai pro registro irmao</button>
 </body>
 <script src="scripthome.js"></script>
 </html>
