--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,14 +15,14 @@
         <h3>Login</h3>
         <input type="text" placeholder="Digite seu login" id="login"><br>
         <input type="password" placeholder="Digite sua senha" id="password"><br>
-        <button onclick="login()">Logar</button>
+        <button class="index" onclick="login()">Logar</button>
     </div><br>
     <div class="register">
         <h3>Registrar</h3>
         <input type="text" placeholder="Digite seu login" id="novoLogin"><br>
         <input type="password" placeholder="Digite sua senha" id="novaSenha"><br>
         <input type="password" placeholder="Repita sua senha" id="repSenha"><br>
-        <button onclick="cadastra()">Cadastrar</button>
+        <button class="index"  onclick="cadastra()">Cadastrar</button>
     </div>
     <script src="script.js"></script>
  
