--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="content">
         <div class="login">
             <h3>Login</h3>
-            <input type="text" placeholder="Digite seu login" id="login"><br>
-            <input type="password" placeholder="Digite sua senha" id="password"><br>
+            <input type="text" placeholder="Digite seu login" id="login" class="caixa"><br>
+            <input type="password" placeholder="Digite sua senha" id="password" class="caixa"><br>
             <button class="index" onclick="login()">Logar</button>
         </div><br><p>
         
     </div>
-    <button class="index1" onclick="registro()">Vai se registrar locão</button>
+    <button class="index" onclick="registro()">Vai se registrar locão</button>
     <script src="script.js"></script>
  
 </body>
