--- a/registro.html
+++ b/registro.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
     <div class="register">
         <h3>Registrar</h3>
-        <input type="text" placeholder="Digite seu login" id="novoLogin"><br>
-        <input type="password" placeholder="Digite sua senha" id="novaSenha"><br>
-        <input type="password" placeholder="Repita sua senha" id="repSenha"><br>
+        <input type="text" placeholder="Coloca teu nome ai" id="novoLogin" class="caixa"><br>
+        <input type="password" placeholder="Digite sua senha" id="novaSenha" class="caixa"><br>
+        <input type="password" placeholder="Repita sua senha" id="repSenha" class="caixa"><br>
         <button class="index"  onclick="cadastra()">Cadastrar</button></p>
         
     </div>
